--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,7 @@
             </div> 
             <div class="col md-2">
                 <button type="button" class="btn btn-success" (click)="viewCart()">Cart</button>
+                <button type="button" class="btn btn-success" (click)="viewCart()">Cart</button>
             </div>
             <div class="col md -2">
                 <h5>{{date | date:'short'}}</h5>
